# object-oriented-programming_6

./: .pre-commit-config.yaml  README.md  pyproject.toml
Prog/: Ind.xml  Ind_1.py  Prim.py
Test/: test_Ind_1.py
src/Ind/: Ind_1.py
src/Prim/: prim.xml
